App file system (#155)

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@
 /action/action-dsl-spi/target/
 /action/action-simulator/target/
 /action/action-util/target/
+/afs/afs-core/target/
+/afs/afs-ext-base/target/
+/afs/afs-local/target/
+/afs/afs-mapdb/target/
+/afs/afs-mapdb-storage/target/
+/afs/afs-storage/target/
 /case-repository/target/
 /commons/target/
 /computation-local/target/
