--- a/afs/afs-ext-base/pom.xml
+++ b/afs/afs-ext-base/pom.xml
@@ -40,6 +40,11 @@
     <dependencies>
         <!-- Compilation dependencies -->
         <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>afs-core</artifactId>
             <version>${project.version}</version>
