--- a/afs/afs-core/pom.xml
+++ b/afs/afs-core/pom.xml
@@ -41,7 +41,7 @@
         <!-- Compilation dependencies -->
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>afs-storage</artifactId>
+            <artifactId>afs-storage-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
