--- a/afs/afs-local/pom.xml
+++ b/afs/afs-local/pom.xml
@@ -30,7 +30,7 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>afs-storage</artifactId>
+            <artifactId>afs-storage-api</artifactId>
             <version>${project.version}</version>
         </dependency>
 
