--- a/afs/afs-storage-api/pom.xml
+++ b/afs/afs-storage-api/pom.xml
@@ -17,7 +17,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>afs-storage</artifactId>
+    <artifactId>afs-storage-api</artifactId>
     <name>AFS storage SPI</name>
 
     <build>
