--- a/distribution-core/pom.xml
+++ b/distribution-core/pom.xml
@@ -89,7 +89,7 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>afs-storage</artifactId>
+            <artifactId>afs-storage-api</artifactId>
             <version>${project.version}</version>
         </dependency>
 
