--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
         <maven.assembly.version>3.0.0</maven.assembly.version>
         <maven.license.version>3.0</maven.license.version>
         <maven.coveralls.version>4.3.0</maven.coveralls.version>
+        <maven.checkstyle.version>2.17</maven.checkstyle.version>
         <groovyeclipsecompiler.version>2.9.2-01</groovyeclipsecompiler.version>
         <groovyeclipsebatch.version>2.4.3-01</groovyeclipsebatch.version>
 
@@ -290,7 +291,7 @@
                         <configuration>
                             <excludes>
                                 <!-- exclude generated classes -->
-                                <exclude>eu/itesla_project/computation/mpi/messages/*</exclude>
+                                <exclude>**/generated/**/*</exclude>
                             </excludes>
                         </configuration>
                         <executions>
@@ -299,6 +300,35 @@
                                 <goals>
                                     <goal>prepare-agent</goal>
                                 </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>checks</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-checkstyle-plugin</artifactId>
+                        <version>${maven.checkstyle.version}</version>
+                        <executions>
+                            <execution>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>check</goal>
+                                </goals>
+                                <configuration>
+                                    <configLocation>checkstyle.xml</configLocation>
+                                    <consoleOutput>true</consoleOutput>
+                                    <failsOnError>true</failsOnError>
+                                    <excludes>**/generated/**/*</excludes>
+                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
