--- a/iidm/iidm-converter-api/pom.xml
+++ b/iidm/iidm-converter-api/pom.xml
@@ -29,6 +29,10 @@
             <artifactId>auto-service</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
