--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
         <groovyeclipsecompiler.version>2.9.2-01</groovyeclipsecompiler.version>
         <groovyeclipsebatch.version>2.4.3-01</groovyeclipsebatch.version>
 
+        <sonar.exclusions>
+            cim1/**,
+            **/generated/**
+        </sonar.exclusions>
+
         <autoservice.version>1.0-rc2</autoservice.version>
         <commonscli.version>1.3.1</commonscli.version>
         <commonscompress.version>1.13</commonscompress.version>
