--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,5 @@ addons:
             secure: ${GITHUB_TOKEN}
 
 script:
-- mvn clean verify -Pjacoco coveralls:report sonar:sonar
+- mvn clean verify -Pjacoco coveralls:report
+- sonar-scanner
