Replace RuntimeException by business exception

--- a/ucte/ucte-network/pom.xml
+++ b/ucte/ucte-network/pom.xml
@@ -22,6 +22,12 @@
     <name>UCTE network</name>
 
     <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>powsybl-commons</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
         <!-- Compilation dependencies -->
         <dependency>
             <groupId>com.google.guava</groupId>
