--- a/computation/pom.xml
+++ b/computation/pom.xml
@@ -24,6 +24,12 @@
     <dependencies>
         <!-- Compilation dependencies -->
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>powsybl-commons</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
