--- a/math/pom.xml
+++ b/math/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>trove4j</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.threeten</groupId>
+            <artifactId>threeten-extra</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-commons</artifactId>
             <version>${project.version}</version>
