--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,7 @@
         <slf4j.version>1.7.22</slf4j.version>
         <staxutils.version>20070216</staxutils.version>
         <supercsv.version>2.4.0</supercsv.version>
+        <threeten.version>1.0</threeten.version>
         <trove4j.version>3.0.3</trove4j.version>
         <truevfs.version>0.11.1</truevfs.version>
         <xmlunit.version>2.3.0</xmlunit.version>
@@ -403,16 +404,6 @@
                 <version>${jodatime.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.apache.servicemix.bundles</groupId>
-                <artifactId>org.apache.servicemix.bundles.gdata</artifactId>
-                <version>${gdata.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.mapdb</groupId>
-                <artifactId>mapdb</artifactId>
-                <version>${mapdb.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>net.java.dev.stax-utils</groupId>
                 <artifactId>stax-utils</artifactId>
                 <version>${staxutils.version}</version>
@@ -454,6 +445,11 @@
                 <version>${poi.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.apache.servicemix.bundles</groupId>
+                <artifactId>org.apache.servicemix.bundles.gdata</artifactId>
+                <version>${gdata.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.codehaus.groovy</groupId>
                 <artifactId>groovy-all</artifactId>
                 <version>${groovy.version}</version>
@@ -467,6 +463,11 @@
                 <groupId>org.kohsuke</groupId>
                 <artifactId>graphviz-api</artifactId>
                 <version>${graphvizapi.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mapdb</groupId>
+                <artifactId>mapdb</artifactId>
+                <version>${mapdb.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
@@ -488,6 +489,11 @@
                         <artifactId>log4j</artifactId>
                     </exclusion>
                 </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>org.threeten</groupId>
+                <artifactId>threeten-extra</artifactId>
+                <version>${threeten.version}</version>
             </dependency>
 
             <!-- Runtime dependencies -->
