Move AMPL converter to Powsybl core repository

--- a/distribution-core/pom.xml
+++ b/distribution-core/pom.xml
@@ -92,6 +92,12 @@
 
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>powsybl-ampl-converter</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-cim1-converter</artifactId>
             <version>${project.version}</version>
         </dependency>
