--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,8 @@
         <groovyeclipsecompiler.version>2.9.2-01</groovyeclipsecompiler.version>
         <groovyeclipsebatch.version>2.4.3-01</groovyeclipsebatch.version>
 
+        <!-- Sonar configuration -->
+        <jacoco.destFile>${java.io.tmpdir}/jacoco-powsybl-core.exec</jacoco.destFile>
         <sonar.exclusions>
             **/cim1/**/*, **/generated/**/*
         </sonar.exclusions>
@@ -312,6 +314,27 @@
                                 <goals>
                                     <goal>prepare-agent</goal>
                                 </goals>
+                                <configuration>
+                                    <destFile>${jacoco.destFile}</destFile>
+                                    <append>true</append>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <configuration>
+                                    <tasks>
+                                        <copy file="${jacoco.destFile}" tofile="${project.build.directory}/jacoco.exec" failonerror="false"/>
+                                    </tasks>
+                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
