Fix sonarcloud code coverage score

--- a/distribution-core/pom.xml
+++ b/distribution-core/pom.xml
@@ -263,6 +263,9 @@
                                 <goals>
                                     <goal>report-aggregate</goal>
                                 </goals>
+                                <configuration>
+                                    <dataFileIncludes>${jacoco.destFile}</dataFileIncludes>
+                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
