Use the same aggregated report for code coverage computation in sonar and coveralls

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ addons:
             secure: ${GITHUB_TOKEN}
 
 script:
-- mvn clean verify -Pjacoco coveralls:report sonar:sonar
+- mvn clean verify -Dproject.jacoco.destFile=${PWD}/target/jacoco.exec -Pjacoco coveralls:report sonar:sonar
