--- a/cim-anonymiser/pom.xml
+++ b/cim-anonymiser/pom.xml
@@ -32,6 +32,7 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
+                            <createDependencyReducedPom>false</createDependencyReducedPom>
                             <filters>
                                 <filter>
                                     <artifact>*:*</artifact>
