--- a/security-analysis/pom.xml
+++ b/security-analysis/pom.xml
@@ -21,6 +21,22 @@
     <artifactId>powsybl-security-analysis</artifactId>
     <name>Security analysis</name>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>test-jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <!-- Compilation dependencies -->
         <dependency>
