--- a/distribution-core/pom.xml
+++ b/distribution-core/pom.xml
@@ -34,7 +34,7 @@
             <artifactId>log4j-over-slf4j</artifactId>
             <scope>runtime</scope>
         </dependency>
-    
+
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-action-dsl</artifactId>
@@ -95,31 +95,31 @@
             <artifactId>powsybl-cim1-converter</artifactId>
             <version>${project.version}</version>
         </dependency>
-        
+
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-cim1-model</artifactId>
             <version>${project.version}</version>
         </dependency>
-    
+
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-commons</artifactId>
             <version>${project.version}</version>
         </dependency>
-        
+
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-computation</artifactId>
             <version>${project.version}</version>
         </dependency>
-    
+
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-computation-local</artifactId>
             <version>${project.version}</version>
         </dependency>
-    
+
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-computation-mpi</artifactId>
@@ -136,14 +136,14 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-entsoe-util</artifactId>
             <version>${project.version}</version>
-        </dependency> 
+        </dependency>
 
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-iidm-api</artifactId>
             <version>${project.version}</version>
         </dependency>
-        
+
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-iidm-converter-api</artifactId>
@@ -155,16 +155,22 @@
             <artifactId>powsybl-iidm-impl</artifactId>
             <version>${project.version}</version>
         </dependency>
-        
+
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-iidm-test</artifactId>
             <version>${project.version}</version>
         </dependency>
-    
+
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-iidm-xml-converter</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>powsybl-iidm-util</artifactId>
             <version>${project.version}</version>
         </dependency>
 
@@ -197,7 +203,7 @@
             <artifactId>powsybl-security-analysis</artifactId>
             <version>${project.version}</version>
         </dependency>
-         
+
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-simulation-api</artifactId>
@@ -215,7 +221,7 @@
             <artifactId>powsybl-ucte-converter</artifactId>
             <version>${project.version}</version>
         </dependency>
-        
+
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-ucte-network</artifactId>
@@ -311,4 +317,3 @@
     </profiles>
 
 </project>
-
