Evolution of node-breaker manipulation (#163)
* Evolution of node-breaker manipulation:
 - removing equipments do not remove adjacent switches any more
 - possibility to remove switches in node-breaker API
 - possibility to traverse the node-breaker graph
 - the clean method now removes useless nodes
 - higher level methods in a separate utility module to manipulate the node breaker topology

* Following code review:
- check for null arguments for public methods
- static imports
- small syntax improvements

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@
 /iidm/iidm-converter-api/target/
 /iidm/iidm-impl/target/
 /iidm/iidm-test/target/
+/iidm/iidm-util/target/
 /iidm/iidm-xml-converter/target/
 /loadflow/loadflow-api/target/
 /loadflow/loadflow-validation/target/
@@ -59,4 +60,3 @@ install.cfg
 org.eclipse.core.resources.prefs
 org.eclipse.jdt.core.prefs
 org.eclipse.m2e.core.prefs
-
